<resources>
    <string name="app_name">FoodBox</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_spalsh_screen">SpalshScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">703563956447717</string>
    <string name="register">Register</string>
    <string name="title_activity_food_box">FoodBox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="search_hint">Restaurant Search</string>

    <string name="search_title">FoodBox Search</string>

    <string name="place_order">Place your order</string>
    <string name="my_cart">My Cart</string>
    <string name="payment_options">Payment Options</string>
    <string name="credit_card">Credit/Debit Card</string>
    <string name="pay_with_new_card">Pay with a new card</string>
    <string name="wallets">Wallets</string>
    <string name="online_banking">Online Banking</string>
    <string name="cash_pickup">Cash at Pickup</string>
    <string name="order_blocked_msg">Your order has been successfully \n blocked, click the \'PICK UP\' when you reach the store.</string>
    <string name="pick_up">Pick Up</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_food_menu">FoodMenu</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
