<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#AF2328"
        android:gravity="center"
        android:text="@string/payment_options"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_card"
                android:textAllCaps="true"
                android:textColor="#AF2328"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/arrow_down_red" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/title"
            android:background="#AF2328" />

        <LinearLayout
            android:id="@+id/layout_credit_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:src="@drawable/visa" />

                <TextView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="4444 **** **** **** 6767" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#AF2328" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:src="@drawable/visa" />

                <TextView
                    android:id="@+id/card2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="4444 **** **** **** 6767" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#AF2328" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="25dp"
                    android:src="@drawable/visa" />

                <TextView
                    android:id="@+id/card3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="4444 **** **** **** 6767" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#AF2328" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_with_new_card"
                    android:textAllCaps="true"
                    android:textColor="#AF2328"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/arrow_right_red" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#AF2328" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/text_wallets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallets"
                android:textAllCaps="true"
                android:textColor="#AF2328"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/arrow_down_red" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/title"
            android:background="#AF2328" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/text_online_banking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/online_banking"
                android:textAllCaps="true"
                android:textColor="#AF2328"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/arrow_down_red" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/title"
            android:background="#AF2328" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/text_cash_pickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash_pickup"
                android:textAllCaps="true"
                android:textColor="#AF2328"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/arrow_down_red" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/title"
            android:background="#AF2328" />
    </LinearLayout>

</LinearLayout>